--- a/DBCConvertor/mainwindow.ui
+++ b/DBCConvertor/mainwindow.ui
@@ -222,7 +222,11 @@ QSpinBox{
            </widget>
           </item>
           <item row="1" column="1" colspan="2">
-           <widget class="QLineEdit" name="ProjectNameLineEdit"/>
+           <widget class="QLineEdit" name="ProjectNameLineEdit">
+            <property name="text">
+             <string>Vector</string>
+            </property>
+           </widget>
           </item>
           <item row="5" column="0">
            <widget class="QLabel" name="UpLoadLabel">
@@ -239,7 +243,11 @@ QSpinBox{
            </widget>
           </item>
           <item row="5" column="1" colspan="2">
-           <widget class="QLineEdit" name="UpLoadLineEdit"/>
+           <widget class="QLineEdit" name="UpLoadLineEdit">
+            <property name="text">
+             <string>C:\Users\mrado\OneDrive\Desktop\work\Parser\Check</string>
+            </property>
+           </widget>
           </item>
           <item row="2" column="1" colspan="2">
            <widget class="QSpinBox" name="MSBoxSpinBox"/>
